@@ -8,6 +8,24 @@
 <br/>
 
 <hr/>
+1.2b7
+<hr/>
+- fixed bug when loading file that used a magnetic grid size from drop-down menu and not visible on the widget<br/>
+- fixed drawing dead notes (X)<br/>
+- improved print layout<br/>
+- improved look of printed note heads<br/>
+- improved look of printed tabs<br/>
+- improved printing of triplets and ties<br/>
+- printing is now non-linear<br/>
+- fixed vertical centering of tracks + fixed assertion failure<br/>
+- hide empty lines when printing<br/>
+- improved silence printing<br/>
+- fixed rendering dotted notes<br/>
+- cleaned up preferences implementation<br/>
+- added an option to automatically launch TiMidity and pick port on linux<br/><br/>
+
+
+<hr/>
 1.2b6
 <hr/>
 - Printing improvements :<br/>
