@@ -17,7 +17,7 @@
 <br/><br/>
 <list>
 <li/><A href="http://downloads.sourceforge.net/ariamaestosa/AriaMaestosa-1.1.3.zip"><b>stable version 1.1.3</b></A>
-<li/><A href="http://downloads.sourceforge.net/ariamaestosa/AriaMaestosa-1.2b6.zip"><b>development version 1.2b6</b></A>
+<li/><A href="http://downloads.sourceforge.net/ariamaestosa/AriaMaestosa-1.2b7.zip"><b>development version 1.2b7</b></A>
 </list>
 <br/>
 <i>Note : current development versions are considered generally stable enough, except for the upcoming printing feature.</i>
@@ -44,6 +44,14 @@
 <font size=1>
 <i>(See <A href="changelog.html">full changelog</A>)</i>
 </font>
+
+<br/>
+<h3>What's new in version 1.2 beta 7</h3>
+<list>
+<li/> Many improvements to printing
+<li/> Minor bug fixes
+<li/> Better Linux support
+</list>
 
 <br/>
 <h3>What's new in version 1.2 beta 6</h3>
